--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header id="main-header">
+    <header id="main-header" class="no-select">
         <h1>iLupo Warehouse</h1>
         <p class="subtitle">
             Un port<span class="secret-letter" data-key="0">a</span>folio 
@@ -45,8 +45,7 @@
 
     <div id="easter-egg-overlay" class="easter-egg-overlay">
         <div class="easter-egg-content">
-            <div id="video-container" class="video-container-easter-egg">
-                </div>
+            <div id="video-container" class="video-container-easter-egg"></div>
             <p class="easter-egg-quote">"A veces es mejor dejar ciertas cosas sin descubrir"</p>
             <p class="easter-egg-signature">2025 - alberto64674yt</p>
             <button id="close-easter-egg" class="close-easter-egg-button">&times;</button>
@@ -55,9 +54,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script>
-        let allProjects = [];
-        let activeTags = new Set();
-        let currentPage = 1;
+        let allProjects = []; let activeTags = new Set(); let currentPage = 1;
         const projectsPerPage = 9;
         const searchBox = document.getElementById('search-box');
         const grid = document.getElementById('portfolio-grid');
@@ -75,31 +72,16 @@
             paginatedProjects.forEach((proyecto, index) => {
                 const card = document.createElement('a');
                 card.className = 'card';
+                card.style.opacity = 0;
                 card.href = `proyecto.html?id=${proyecto.id}`;
-                card.addEventListener('mousemove', (e) => {
-                    const rect = e.currentTarget.getBoundingClientRect();
-                    const x = e.clientX - rect.left;
-                    const y = e.clientY - rect.top;
-                    const centerX = rect.width / 2;
-                    const centerY = rect.height / 2;
-                    const rotateX = (y - centerY) / 15;
-                    const rotateY = (centerX - x) / 15;
-                    const innerCard = e.currentTarget.querySelector('.card-inner');
-                    innerCard.style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg) scale(1.05)`;
+                card.addEventListener('mousemove', e => {
+                    const rect = e.currentTarget.getBoundingClientRect(), x = e.clientX - rect.left, y = e.clientY - rect.top, centerX = rect.width / 2, centerY = rect.height / 2, rotateX = (y - centerY) / 15, rotateY = (centerX - x) / 15;
+                    e.currentTarget.querySelector('.card-inner').style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg) scale(1.05)`;
                 });
-                card.addEventListener('mouseleave', (e) => {
-                    e.currentTarget.querySelector('.card-inner').style.transform = 'rotateX(0) rotateY(0) scale(1)';
-                });
-                card.innerHTML = `
-                    <div class="card-inner">
-                        <img class="card-hero-image" src="${proyecto.imagen}" alt="${proyecto.titulo}">
-                        <div class="card-content">
-                            <h2>${proyecto.titulo}</h2>
-                            <div class="card-excerpt">${marked.parse(proyecto.resumen || '')}</div>
-                            <span class="button-imitation">Ver detalles</span>
-                        </div>
-                    </div>`;
+                card.addEventListener('mouseleave', e => { e.currentTarget.querySelector('.card-inner').style.transform = 'rotateX(0) rotateY(0) scale(1)'; });
+                card.innerHTML = `<div class="card-inner"><img class="card-hero-image" src="${proyecto.imagen}" alt="${proyecto.titulo}"><div class="card-content"><h2>${proyecto.titulo}</h2><div class="card-excerpt">${marked.parse(proyecto.resumen || '')}</div><span class="button-imitation">Ver detalles</span></div></div>`;
                 grid.appendChild(card);
+                setTimeout(() => { card.style.opacity = 1; card.classList.add('initial-appear'); }, index * 100);
             });
         }
 
@@ -133,9 +115,7 @@
                     const clickedTag = e.target.dataset.tag;
                     if (clickedTag === 'all') activeTags.clear();
                     else activeTags.has(clickedTag) ? activeTags.delete(clickedTag) : activeTags.add(clickedTag);
-                    document.querySelectorAll('.tag-button').forEach(btn => {
-                        btn.classList.toggle('active', (activeTags.size === 0 && btn.dataset.tag === 'all') || activeTags.has(btn.dataset.tag));
-                    });
+                    document.querySelectorAll('.tag-button').forEach(btn => btn.classList.toggle('active', (activeTags.size === 0 && btn.dataset.tag === 'all') || activeTags.has(btn.dataset.tag)));
                     currentPage = 1;
                     filterAndRender();
                 });
@@ -147,16 +127,13 @@
             let filtered = allProjects;
             if (searchTerm) filtered = filtered.filter(p => p.titulo.toLowerCase().includes(searchTerm));
             if (activeTags.size > 0) {
-                filtered = filtered.filter(p => {
-                    const projectTags = new Set((p.tags || []).map(t => t.trim()));
-                    return [...activeTags].every(tag => projectTags.has(tag));
-                });
+                filtered = filtered.filter(p => { const projectTags = new Set((p.tags || []).map(t => t.trim())); return [...activeTags].every(tag => projectTags.has(tag)); });
             }
             renderCards(filtered);
             setupPagination(filtered.length);
         }
 
-        fetch('proyectos.json').then(r=>r.json()).then(data=>{allProjects=data.items||[];window.proyectos=allProjects;generateTags(allProjects);filterAndRender()}).catch(e=>{grid.innerHTML='<p class="empty-message">Error al cargar proyectos.</p>'});
+        fetch('proyectos.json').then(r=>r.json()).then(data=>{allProjects=data.items||[];window.proyectos=allProjects;generateTags(allProjects);filterAndRender()}).catch(e=>{console.error(e); grid.innerHTML='<p class="empty-message">Error al cargar proyectos.</p>'});
         searchBox.addEventListener('input', () => { currentPage = 1; filterAndRender(); });
         const gridBtn = document.getElementById('grid-view-btn');
         const listBtn = document.getElementById('list-view-btn');
@@ -166,11 +143,9 @@
     </script>
     
     <script>
-        // SCRIPT PARA ACCESO SECRETO Y EASTER EGG
         (function() {
-            // --- Acceso al Panel ---
-            const requiredLength = 5; 
-            let progress = 0;
+            // Acceso Secreto al Panel
+            const requiredLength = 5; let progress = 0;
             document.addEventListener('click', function(e) {
                 const target = e.target;
                 if (target.classList.contains('secret-letter') && parseInt(target.dataset.key) === progress) progress++;
@@ -178,32 +153,26 @@
                 if (progress === requiredLength) window.location.href = 'panel.html';
             });
 
-            // --- Easter Egg ---
+            // Easter Egg
             const titleElement = document.querySelector('#main-header h1');
             const overlay = document.getElementById('easter-egg-overlay');
             const videoContainer = document.getElementById('video-container');
             const closeButton = document.getElementById('close-easter-egg');
-            let clickCount = 0;
-            let timer;
-
+            let clickCount = 0; let timer;
             titleElement.addEventListener('click', function() {
                 clickCount++;
                 clearTimeout(timer);
-                timer = setTimeout(() => { clickCount = 0; }, 1000); // 1 segundo para hacer los 5 clics
-
+                timer = setTimeout(() => { clickCount = 0; }, 1000);
                 if (clickCount === 5) {
                     clickCount = 0;
                     alert("Has Encontrado algo que no deberías poder estar viéndo, tanto tiempo libre tienes para toquetear toda la pagina y descubrir esto? bueno aqui tienes tu hallazgo:");
-                    
-                    // Cargar y mostrar el vídeo
                     videoContainer.innerHTML = '<iframe src="https://www.youtube.com/embed/bN1shALfJqg?autoplay=1&loop=1&controls=0&playlist=bN1shALfJqg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>';
                     overlay.style.display = 'flex';
                 }
             });
-
             closeButton.addEventListener('click', function() {
                 overlay.style.display = 'none';
-                videoContainer.innerHTML = ''; // Detener el vídeo
+                videoContainer.innerHTML = '';
             });
         })();
     </script>
