--- a/index.html
+++ b/index.html
@@ -148,9 +148,16 @@
             const requiredLength = 5; let progress = 0;
             document.addEventListener('click', function(e) {
                 const target = e.target;
-                if (target.classList.contains('secret-letter') && parseInt(target.dataset.key) === progress) progress++;
-                else if (!target.classList.contains('secret-letter')) progress = 0;
-                if (progress === requiredLength) window.location.href = 'panel.html';
+                if (target.classList.contains('secret-letter') && parseInt(target.dataset.key) === progress) {
+                    progress++;
+                } else if (!target.classList.contains('secret-letter')) {
+                    progress = 0;
+                }
+                if (progress === requiredLength) {
+                    // --- LÍNEA RESTAURADA ---
+                    alert('Acceso correcto. Redirigiendo...');
+                    window.location.href = 'panel.html';
+                }
             });
 
             // Easter Egg
@@ -178,3 +185,4 @@
     </script>
 </body>
 </html>
+
