--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
 
         marked.setOptions({ gfm: true, breaks: true });
 
+        const cardObserver = new IntersectionObserver((entries, observer) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('is-visible');
+                    observer.unobserve(entry.target);
+                }
+            });
+        }, { threshold: 0.1 });
+
         function renderCards(proyectos) {
             grid.innerHTML = '';
             if (!proyectos || proyectos.length === 0) {
@@ -69,10 +78,9 @@
                 return;
             }
             const paginatedProjects = proyectos.slice().reverse().slice((currentPage - 1) * projectsPerPage, currentPage * projectsPerPage);
-            paginatedProjects.forEach((proyecto, index) => {
+            paginatedProjects.forEach((proyecto) => {
                 const card = document.createElement('a');
                 card.className = 'card';
-                card.style.opacity = 0;
                 card.href = `proyecto.html?id=${proyecto.id}`;
                 card.addEventListener('mousemove', e => {
                     const rect = e.currentTarget.getBoundingClientRect(), x = e.clientX - rect.left, y = e.clientY - rect.top, centerX = rect.width / 2, centerY = rect.height / 2, rotateX = (y - centerY) / 15, rotateY = (centerX - x) / 15;
@@ -81,7 +89,7 @@
                 card.addEventListener('mouseleave', e => { e.currentTarget.querySelector('.card-inner').style.transform = 'rotateX(0) rotateY(0) scale(1)'; });
                 card.innerHTML = `<div class="card-inner"><img class="card-hero-image" src="${proyecto.imagen}" alt="${proyecto.titulo}"><div class="card-content"><h2>${proyecto.titulo}</h2><div class="card-excerpt">${marked.parse(proyecto.resumen || '')}</div><span class="button-imitation">Ver detalles</span></div></div>`;
                 grid.appendChild(card);
-                setTimeout(() => { card.style.opacity = 1; card.classList.add('initial-appear'); }, index * 100);
+                cardObserver.observe(card);
             });
         }
 
@@ -106,16 +114,35 @@
 
         function generateTags(proyectos) {
             const tagContainer = document.getElementById('tag-filter-container');
-            const allTags = new Set();
-            proyectos.forEach(p => (p.tags || []).forEach(tag => allTags.add(tag.trim())));
-            tagContainer.innerHTML = '<button class="tag-button active" data-tag="all">Todos</button>';
-            [...allTags].sort().forEach(tag => tagContainer.innerHTML += `<button class="tag-button" data-tag="${tag}">${tag}</button>`);
+            const tagCounts = {};
+            proyectos.forEach(p => {
+                (p.tags || []).forEach(tag => {
+                    const trimmedTag = tag.trim();
+                    tagCounts[trimmedTag] = (tagCounts[trimmedTag] || 0) + 1;
+                });
+            });
+            const sortedTags = Object.keys(tagCounts).sort();
+            tagContainer.innerHTML = `<button class="tag-button active" data-tag="all">Todos (${proyectos.length})</button>`;
+            sortedTags.forEach(tag => {
+                tagContainer.innerHTML += `<button class="tag-button" data-tag="${tag}">${tag} (${tagCounts[tag]})</button>`;
+            });
             document.querySelectorAll('.tag-button').forEach(button => {
                 button.addEventListener('click', e => {
                     const clickedTag = e.target.dataset.tag;
-                    if (clickedTag === 'all') activeTags.clear();
-                    else activeTags.has(clickedTag) ? activeTags.delete(clickedTag) : activeTags.add(clickedTag);
-                    document.querySelectorAll('.tag-button').forEach(btn => btn.classList.toggle('active', (activeTags.size === 0 && btn.dataset.tag === 'all') || activeTags.has(btn.dataset.tag)));
+                    if (clickedTag === 'all') {
+                        activeTags.clear();
+                    } else {
+                        if (activeTags.has(clickedTag)) {
+                            activeTags.delete(clickedTag);
+                        } else {
+                            activeTags.add(clickedTag);
+                        }
+                    }
+                    document.querySelectorAll('.tag-button').forEach(btn => {
+                        const isAllButton = btn.dataset.tag === 'all';
+                        const isActive = (activeTags.size === 0 && isAllButton) || activeTags.has(btn.dataset.tag);
+                        btn.classList.toggle('active', isActive);
+                    });
                     currentPage = 1;
                     filterAndRender();
                 });
@@ -125,9 +152,14 @@
         function filterAndRender() {
             const searchTerm = searchBox.value.toLowerCase();
             let filtered = allProjects;
-            if (searchTerm) filtered = filtered.filter(p => p.titulo.toLowerCase().includes(searchTerm));
+            if (searchTerm) {
+                filtered = filtered.filter(p => p.titulo.toLowerCase().includes(searchTerm));
+            }
             if (activeTags.size > 0) {
-                filtered = filtered.filter(p => { const projectTags = new Set((p.tags || []).map(t => t.trim())); return [...activeTags].every(tag => projectTags.has(tag)); });
+                filtered = filtered.filter(p => { 
+                    const projectTags = new Set((p.tags || []).map(t => t.trim())); 
+                    return [...activeTags].every(tag => projectTags.has(tag)); 
+                });
             }
             renderCards(filtered);
             setupPagination(filtered.length);
@@ -185,4 +217,3 @@
     </script>
 </body>
 </html>
-
