--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </header>
 
     <div class="filter-controls">
+        <a href="sobre-mi.html" class="about-me-button">Sobre Mí</a>
         <div class="top-controls">
             <div class="search-container">
                 <input type="text" id="search-box" placeholder="Buscar por nombre...">
