--- a/panel.html
+++ b/panel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF--8">
     <title>Panel de Control - iLupo Warehouse</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
                         <label for="imagen">URL de la Imagen Principal</label>
                         <input type="text" id="imagen" oninput="updatePreview()">
                         <label for="tags">Etiquetas (separadas por comas)</label>
-                        <input type="text" id="tags" placeholder="Ej: Herramienta, Python, Android" oninput="updatePreview()">
+                        <input type="text" id="tags" placeholder="Ej: Programación > Python, Juegos > Minecraft > Mods" oninput="updatePreview()">
                         <label for="contenido_completo">Descripción Completa (Markdown)</label>
                         <div class="markdown-toolbar">
                             <button onclick="applyMarkdown('bold', 'contenido_completo')" title="Negrita"><b>B</b></button>
