--- a/tags.html
+++ b/tags.html
@@ -28,6 +28,17 @@
             const titleElement = document.getElementById('tag-page-title');
             const grid = document.getElementById('portfolio-grid');
 
+            // --- CÓDIGO AÑADIDO: INTERSECTION OBSERVER ---
+            const cardObserver = new IntersectionObserver((entries, observer) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('is-visible');
+                        observer.unobserve(entry.target);
+                    }
+                });
+            }, { threshold: 0.1 });
+            // --- FIN DEL CÓDIGO AÑADIDO ---
+
             if (!tagName) {
                 titleElement.innerText = "Etiqueta no especificada";
                 return;
@@ -41,11 +52,9 @@
                 .then(data => {
                     const allProjects = data.items || [];
                     
-                    // --- LÓGICA DE FILTRADO MODIFICADA ---
                     const filteredProjects = allProjects.filter(p => 
                         p.tags && p.tags.some(projectTag => projectTag.startsWith(tagName))
                     );
-                    // --- FIN DE LA LÓGICA MODIFICADA ---
 
                     if (filteredProjects.length === 0) {
                         grid.innerHTML = '<p class="empty-message">No se encontraron proyectos con esta etiqueta.</p>';
@@ -67,6 +76,8 @@
                             </div>
                         `;
                         grid.appendChild(card);
+                        // --- LÍNEA AÑADIDA: OBSERVAR LA TARJETA ---
+                        cardObserver.observe(card);
                     });
                 });
         });
