--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header id="main-header" class="no-select">
         <h1>iLupo Warehouse</h1>
         <p class="subtitle" id="subtitle">
-            Un portafolio de herramientas e invenciones.
+            "Con gran fluidez, mi pequeño workflow exhibe hoy la hazaña de zanjar viejos bugs."
         </p>
     </header>
 
@@ -330,3 +330,4 @@
     </script>
 </body>
 </html>
+
